--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="index.html" target="_blank"
+							<a href="signin.html" 
 								><i class="fas fa-user"></i> Đăng nhập</a
 							>
 						</li>
