change logo color when hover and header link target

--- a/signin.html
+++ b/signin.html
@@ -89,10 +89,10 @@
           <h3 class="text-medium text-center">Đăng nhập chỉ 1 bước</h3>
           <div class="other-sign-in-choices">
             <div>
-              <a href="#"><i class="fab fa-facebook fa-3x"></i></a> 
+              <a href="#"><i class="fab fa-facebook fa-2x"></i></a> 
             </div>
             <div>
-              <a href=""><i class="fab fa-google fa-3x"></i></a>
+              <a href=""><i class="fab fa-google fa-2x"></i></a>
             </div>
             
           </div>
@@ -103,7 +103,9 @@
 						<label for="username">Email hoặc số điện thoại</label>
 						<input type="text" id="username" />
 						<label for="password">Mật khẩu</label>
-						<input type="password" id="password" />
+            <input type="password" id="password" />
+            <p class="text-center py-2">
+              <a href="#" class="text-info"> Quên mật khẩu?</a></p>
 						<input type="submit" value="Đăng nhập" />
 					</form>
 				</div>
