--- a/endow_details.html
+++ b/endow_details.html
@@ -41,24 +41,22 @@
 					</div>
 					<ul class="nav-bar">
 						<li>
-							<a href="index.html" class="current" target="_blank">
-								Trang chủ</a
-							>
+							<a href="index.html"> Trang chủ</a>
 						</li>
 						<li>
-							<a href="endow_details.html" target="_blank"> Khuyến mại</a>
+							<a href="endow_details.html" class="current"> Khuyến mại</a>
 						</li>
 						<li>
-							<a href="news.html" target="_blank"> Tin tức</a>
+							<a href="news.html" > Tin tức</a>
 						</li>
 						<li>
-							<a href="index.html" target="_blank"> Giới thiệu</a>
+							<a href="index.html" > Giới thiệu</a>
 						</li>
 						<li>
-							<a href="news.html" target="_blank"> Liên hệ</a>
+							<a href="news.html"> Liên hệ</a>
 						</li>
 						<li>
-							<a href="index.html" target="_blank">
+							<a href="index.html">
 								<i class="fas fa-globe-americas"></i>
 								<i class="fas fa-sort-down"></i> Vietnamese
 							</a>
@@ -191,7 +189,7 @@
 			</div>
 		</section>
 
-	<!-- footer -->
+		<!-- footer -->
 		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
