--- a/index.html
+++ b/index.html
@@ -34,31 +34,30 @@
 							class="main-nav-logo text-logo"
 							href="index.html"
 							id="logo"
-							target="_blank"
 						>
 							<i class="fas fa-layer-group"> </i> MANDALA INN
 						</a>
 					</div>
 					<ul class="nav-bar">
 						<li>
-							<a href="index.html" class="current" target="_blank">
+							<a href="index.html" class="current">
 								Trang chủ</a
 							>
 						</li>
 						<li>
-							<a href="endow_details.html" target="_blank"> Khuyến mại</a>
+							<a href="endow_details.html"> Khuyến mại</a>
 						</li>
 						<li>
 							<a href="news.html" target="_blank"> Tin tức</a>
 						</li>
 						<li>
-							<a href="payment1.html" target="_blank"> Giới thiệu</a>
+							<a href="payment1.html"> Giới thiệu</a>
 						</li>
 						<li>
-							<a href="news.html" target="_blank"> Liên hệ</a>
+							<a href="news.html" > Liên hệ</a>
 						</li>
 						<li>
-							<a href="index.html" target="_blank">
+							<a href="index.html" >
 								<i class="fas fa-globe-americas"></i>
 								<i class="fas fa-sort-down"></i> Vietnamese
 							</a>
