--- a/payment2.html
+++ b/payment2.html
@@ -22,14 +22,14 @@
     <div class="header-container">
       <nav class="main-nav" class="py-1">
         <div class="main-logo-box">
-          <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
+          <a class="main-nav-logo text-logo" href="index.html" id="logo" >
             <i class="fas fa-layer-group">
             </i> MANDALA INN
           </a>
         </div>
         <ul class="nav-bar">
           <li>
-            <a href="index.html" class="current" target="_blank"> Trang chủ</a>
+            <a href="index.html" class="current" > Trang chủ</a>
           </li>
           <li>
             <a href="endow_details.html" target="_blank"> Khuyến mại</a>
@@ -38,13 +38,13 @@
             <a href="news.html" target="_blank"> Tin tức</a>
           </li>
           <li>
-            <a href="index.html" target="_blank"> Giới thiệu</a>
+            <a href="index.html" > Giới thiệu</a>
           </li>
           <li>
-            <a href="news.html" target="_blank"> Liên hệ</a>
+            <a href="news.html"> Liên hệ</a>
           </li>
           <li>
-            <a href="index.html" target="_blank">
+            <a href="index.html">
               <i class="fas fa-globe-americas"></i>
               <i class="fas fa-sort-down"></i> Vietnamese
             </a>
@@ -53,7 +53,7 @@
             </ul>
           </li>
           <li>
-            <a href="index.html" target="_blank"><i class="fas fa-user"></i> Đăng nhập</a>
+            <a href="index.html" ><i class="fas fa-user"></i> Đăng nhập</a>
           </li>
           <li>
             <a href="index.html" target="_blank"><i class="fas fa-user-plus"></i> Đăng ký</a>
