change email box

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<a href="news.html" > Liên hệ</a>
 						</li>
 						<li>
-							<a href="index.html" >
+							<a href="searchhtml" >
 								<i class="fas fa-globe-americas"></i>
 								<i class="fas fa-sort-down"></i> Vietnamese
 							</a>
@@ -228,7 +228,7 @@
 				<i class="fas fa-arrow-up"></i>
 			</a>
 			<div class="dialogue">
-				<h4 class="py-0">19009876</h4>
+				<h4 class="py-0 text-small">19009876</h4>
 				<div class="message-dialogue">
 					<a href="#"><i class="far fa-comment-alt"></i> Bạn cần hỗ trợ?</a>
 				</div>
@@ -405,7 +405,7 @@
 				</div>
 			</article>
 			<div class="list-next-articles">
-				<a href="#" class="btn next-article"
+				<a href="search_results.html" class="btn next-article"
 					>Xem thêm <i class="fas fa-chevron-right"></i
 				></a>
 			</div>
